@@ -791,6 +791,7 @@ void DboxMain::OnOptions()
       iter_entry = m_MapMenuShortcuts.find(ID_MENUITEM_VIEW);
       iter_entry->second.SetKeyFlags(iter->second);
 
+      // Find Delete Shortcut
       iter = m_MapMenuShortcuts.find(ID_MENUITEM_DELETE);
       iter_entry = m_MapMenuShortcuts.find(ID_MENUITEM_DELETEENTRY);
       iter_entry->second.SetKeyFlags(iter->second);
@@ -801,6 +802,7 @@ void DboxMain::OnOptions()
       m_ctlItemTree.SetDeleteKey(iter->second.cVirtKey, iter->second.cModifier);
       m_ctlItemList.SetDeleteKey(iter->second.cVirtKey, iter->second.cModifier);
 
+      // Find Rename Shortcut
       iter = m_MapMenuShortcuts.find(ID_MENUITEM_RENAME);
       iter_entry = m_MapMenuShortcuts.find(ID_MENUITEM_RENAMEENTRY);
       iter_entry->second.SetKeyFlags(iter->second);
@@ -972,4 +974,33 @@ void DboxMain::UpdatePasswordHistory(int iAction, int new_default_max)
     cs_Msg.Format(ids, num_altered);
     gmb.AfxMessageBox(cs_Msg);
   }
+}
+
+void DboxMain::OnGeneratePassword()
+{
+  COptions_PropertySheet GenPswdPS(IDS_OPTIONS, this);
+  COptionsPasswordPolicy pp(false);
+  pp.m_pDbx = this;
+
+  PWSprefs *prefs = PWSprefs::GetInstance();
+
+  pp.m_pwuselowercase = prefs->GetPref(PWSprefs::PWUseLowercase);
+  pp.m_pwuseuppercase = prefs->GetPref(PWSprefs::PWUseUppercase);
+  pp.m_pwusedigits = prefs->GetPref(PWSprefs::PWUseDigits);
+  pp.m_pwusesymbols = prefs->GetPref(PWSprefs::PWUseSymbols);
+  pp.m_pwusehexdigits = prefs->GetPref(PWSprefs::PWUseHexDigits);
+  pp.m_pweasyvision = prefs->GetPref(PWSprefs::PWUseEasyVision);
+  pp.m_pwmakepronounceable = prefs->GetPref(PWSprefs::PWMakePronounceable);
+  pp.m_pwdefaultlength = prefs->GetPref(PWSprefs::PWDefaultLength);
+  pp.m_pwdigitminlength = prefs->GetPref(PWSprefs::PWDigitMinLength);
+  pp.m_pwlowerminlength = prefs->GetPref(PWSprefs::PWLowercaseMinLength);
+  pp.m_pwsymbolminlength = prefs->GetPref(PWSprefs::PWSymbolMinLength);
+  pp.m_pwupperminlength = prefs->GetPref(PWSprefs::PWUppercaseMinLength);
+
+  CString cs_caption(MAKEINTRESOURCE(IDS_GENERATEPASSWORD));
+  GenPswdPS.AddPage(&pp);
+  GenPswdPS.m_psh.dwFlags |= PSH_NOAPPLYNOW;
+  GenPswdPS.m_psh.pszCaption = cs_caption;
+
+  GenPswdPS.DoModal();
 }
