@@ -758,4 +758,7 @@ END
 STRINGTABLE
 BEGIN
   IDS_DATETIMESTRING       "YYMMDD_HHMMSS"
+  IDS_PASSWORDGENERATED1   "Password Generated based on displayed policy"
+  IDS_PASSWORDGENERATED2   "The password ""%s"" has been copied to the clipboard."
+  IDS_GENERATEPASSWORD     "Generate Password"
 END
